k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: edueval
  labels:
    app.kubernetes.io/part-of: student-grading-app
